Addressed minor issues found during integration test logs. Removed Codevoc code coverage feature. Resolved model_evaluator not found error.

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -308,6 +308,8 @@ jobs:
           name: test-results
           path: |
             coverage.xml
+            pytest-report.html
+          retention-days: 7
 
   # ===================================================================
   # 🐳 STAGE 3: Docker Build & Registry
