--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -12,14 +12,13 @@ RUN apt-get update && apt-get install -y \
 
 # 더 나은 캐싱을 위해 requirements 먼저 복사
 COPY requirements-resolved.txt .
-RUN pip install --no-cache-dir -r requirements-resolved.txt
+RUN pip install -r requirements-resolved.txt
 # RUN pip install  -r requirements.txt
 
 # 애플리케이션 코드 복사
-# ? COPY src/ src/
-COPY configs/ configs/
-COPY src/ ./src/
-COPY models/ ./models/
+COPY configs/ /app/configs/
+COPY src/ /app/src/
+COPY models/ /app/models/
 
 
 # 모델과 로그를 위한 디렉토리 생성
