--- a/docker/docker-compose.monitoring.yml
+++ b/docker/docker-compose.monitoring.yml
@@ -1,8 +1,6 @@
 # docker/docker-compose.monitoring.yml
 # Development Docker Compose with Environment Variables
 
-version: "3.8"
-
 services:
   mlflow:
     build:
@@ -18,7 +16,7 @@ services:
       - ./mlartifacts:/mlartifacts # ✅ Relative to docker/ directory
       - prometheus_multiproc:/tmp/prometheus_multiproc
     environment:
-      - MLFLOW_BACKEND_STORE_URI=${MLFLOW_BACKEND_STORE_URI:-sqlite:///mlruns/mlflow.db}
+      - MLFLOW_BACKEND_STORE_URI=${MLFLOW_BACKEND_STORE_URI:-sqlite:////mlruns/mlflow.db}
       - MLFLOW_DEFAULT_ARTIFACT_ROOT=${MLFLOW_DEFAULT_ARTIFACT_ROOT:-./mlartifacts}
       - PROMETHEUS_MULTIPROC_DIR=${PROMETHEUS_MULTIPROC_DIR:-/tmp/prometheus_multiproc}
       - MLFLOW_HOST=${MLFLOW_HOST:-0.0.0.0}
@@ -26,7 +24,7 @@ services:
     env_file:
       - monitoring.env # ✅ File in same directory as compose file
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      test: [ "CMD", "curl", "-f", "http://localhost:5000/health" ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -65,7 +63,7 @@ services:
       - ../src:/app/src # ✅ Go up to project root, then to src
       - prometheus_multiproc:/tmp/prometheus_multiproc
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8000/health" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -121,7 +119,7 @@ services:
 
   alertmanager:
     build:
-      context: .. # ✅ Parent directory (project root)
+      context: ..
       dockerfile: docker/monitoring/alertmanager/Dockerfile
     image: prom/alertmanager:${ALERTMANAGER_VERSION:-v0.25.0}
     container_name: mlops-alertmanager-monitoring
@@ -139,7 +137,7 @@ services:
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - WEBHOOK_URL=${WEBHOOK_URL}
     env_file:
-      - monitoring.env # ✅ Fixed typo (.en -> .env)
+      - monitoring.env
     volumes:
       - ./monitoring/alertmanager/alertmanager-template.yml:/etc/alertmanager/alertmanager-template.yml:ro
       - ./monitoring/alertmanager/logs:/var/log/alertmanager
@@ -148,15 +146,7 @@ services:
     networks:
       - mlops-network
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--quiet",
-          "--tries=1",
-          "--spider",
-          "http://localhost:9093/-/healthy",
-        ]
+      test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9093/-/healthy" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -178,7 +168,7 @@ services:
       - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)|^/mnt/wsl"
       - "--collector.filesystem.fs-types-exclude=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$$"
     env_file:
-      - monitoring.env # ✅ File in same directory as compose file
+      - monitoring.env
     networks:
       - mlops-network
 
@@ -196,7 +186,7 @@ services:
     devices:
       - /dev/kmsg:/dev/kmsg
     env_file:
-      - monitoring.env # ✅ File in same directory as compose file
+      - monitoring.env
     restart: unless-stopped
     privileged: true
     networks:
@@ -207,6 +197,7 @@ volumes:
   prometheus_multiproc:
   grafana-storage:
   alertmanager-storage:
+
 
 networks:
   mlops-network:
