Added model for testing

--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -1,4 +1,4 @@
-# Dockerfile.ap
+# Dockerfile.api
 FROM python:3.11-slim
 
 # 작업 디렉토리 설정
@@ -19,10 +19,28 @@ RUN pip install -r requirements-resolved.txt
 COPY configs/ /app/configs/
 COPY src/ /app/src/
 COPY models/ /app/models/
-COPY models/latest_model.joblib /app/models/
-COPY models/scaler_20250601_000406.joblib /app/models/
+RUN python -c "\
+    import joblib; \
+    import numpy as np; \
+    from sklearn.ensemble import RandomForestRegressor; \
+    print('Creating Docker model...'); \
+    np.random.seed(42); \
+    X = np.random.rand(50, 3); \
+    X[:, 0] = 2000 + X[:, 0] * 24; \
+    X[:, 1] = 90 + X[:, 1] * 90; \
+    X[:, 2] = 5000 + X[:, 2] * 995000; \
+    y = 5 + np.random.rand(50) * 5; \
+    model = RandomForestRegressor(n_estimators=5, random_state=42); \
+    model.fit(X, y); \
+    model_data = {'model': model, 'feature_names': ['startYear', 'runtimeMinutes', 'numVotes'], 'model_info': {'model_type': 'RandomForestRegressor', 'version': 'docker-1.0'}}; \
+    joblib.dump(model_data, '/app/models/docker_model.joblib'); \
+    print('✅ Docker model created')"
+
 # 모델과 로그를 위한 디렉토리 생성
 RUN mkdir -p models logs data/processed
+
+# Option 3: Copy with error handling
+COPY models/*.joblib /app/models/ 2>/dev/null || true
 
 RUN mkdir -p /app/logs /tmp/prometheus_multiproc
 
