--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -41,9 +41,11 @@ ENV PYTHONPATH=/app \
 # Expose port
 EXPOSE 8000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
+# Improved health check with better timeout and retry logic
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
+    CMD curl -f http://localhost:8000/health \
+    && curl -s http://localhost:8000/health | grep -q '"status".*"healthy\|degraded"' \
+    || exit 1
 
 # Run application
 CMD ["uvicorn", "src.api.main_with_metrics:app", "--host", "0.0.0.0", "--port", "8000"]
