--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -25,7 +25,7 @@ RUN mkdir -p /app/models /app/logs /app/data/processed /tmp/prometheus_multiproc
 COPY models/test_models /app/models/
 
 # Print success message if files were copied
-RUN if compgen -G "/app/models/*.joblib" > /dev/null; then \
+RUN if find /app/models -name "*.joblib" | grep -q .; then \
     echo "✅ Successfully copied test model files to /app/models/:"; \
     ls -la /app/models/*.joblib; \
     else \
