--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -425,11 +425,11 @@ jobs:
           context: .
           file: ./docker/Dockerfile.api
           push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        platforms: linux/amd64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64
 
       - name: Test Docker image
         run: |
@@ -443,6 +443,7 @@ jobs:
 
           # Test 1: Basic Python environment (without starting server)
           echo "📋 Testing Python environment..."
+          docker pull "$TEST_IMAGE"
           docker run --rm --entrypoint python "$TEST_IMAGE" -c "
           import sys
           print('✅ Container Python environment works')
