Fixed Summary job failing due to possibly arithmetic operations being performed incorrectly due to "sh" environment. Defined shell to "bash" for proper execution. Also removed the counter++ to avoid potential problems.

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -795,6 +795,7 @@ jobs:
     steps:
       - name: Calculate pipeline metrics
         id: metrics
+        shell: bash
         run: |
           echo "🎉 MLOps CI/CD Pipeline Summary"
           echo "==============================="
@@ -812,10 +813,15 @@ jobs:
           
           successful=0
           total=${#jobs[@]}
+          # Debug output
+          echo "Job results:"
+          for i in "${!jobs[@]}"; do
+            echo "Job $i: ${jobs[$i]}"
+          done
           
           for result in "${jobs[@]}"; do
             if [[ "$result" == "success" ]]; then
-              ((successful++))
+              successful=$((successful + 1))
             fi
           done
           
